basic github pages version

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
     <title>12xmonobrowser</title>
   </head>
-  <body>
+  <body><h3>
+      BINAURAL RENDERING OF 12XMONO BY DAVID CURRIE</h3>
+    <p id="status"></p>
     <script src="audio.js"></script>
   </body>
 </html>
