--- a/index.html
+++ b/index.html
@@ -7,16 +7,21 @@
     <link rel="stylesheet" href="main.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.1.3/howler.js"
       integrity="sha256-FNAKr1U+8W8E3zROGSYO2dQKFHIpoGU/TVm8aGpGWUY="crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/p5.min.js"
-      integrity="sha256-8IAwtdm0tRSYpMA1G5K1jpeHZq1N02yrdpoBteVVuMc="crossorigin="anonymous"></script>
-    <script src="sketch.js"></script>
+    <script src="js/audio.js"></script>
+    <script src="js/three.js"></script>
+    <script src="js/FirstPersonControls.js"></script>
 
 
     <title>12xmonobrowser</title>
   </head>
-  <body><h3>
-      BINAURAL RENDERING OF 12XMONO BY DAVID CURRIE</h3>
-    <p id="status"></p>
-    <script src="audio.js"></script>
+  <body>
+    <h3>
+      12XMONO BY DAVID CURRIE
+    </h3>
+    <p>Binaural Rendering</p>
+    <p id="status">Loading...</p>
+    <script src="js/animation.js"></script>
+
+
   </body>
 </html>
