fixed rotation being 180 off (i hope)

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     </h3>
     <p>Binaural Rendering</p>
     <p id="status">Loading...</p>
+    <div style="text-align: center;">
+      <button onclick="play()" id="playButton" style="display: none">Play</button>
+    </div>
     <script src="js/animation.js"></script>
 
 
