--- a/index.html
+++ b/index.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="main.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.1.3/howler.js"
-      integrity="sha256-FNAKr1U+8W8E3zROGSYO2dQKFHIpoGU/TVm8aGpGWUY="crossorigin="anonymous"></script>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="main.css" />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.1.3/howler.js"
+      integrity="sha256-FNAKr1U+8W8E3zROGSYO2dQKFHIpoGU/TVm8aGpGWUY="
+      crossorigin="anonymous"
+    ></script>
     <script src="js/audio.js"></script>
     <script src="js/three.js"></script>
     <script src="js/FirstPersonControls.js"></script>
-
 
     <title>12xmonobrowser</title>
   </head>
   <body>
     <h3>
-      12XMONO BY DAVID CURRIE
+      12XMONO
     </h3>
     <p>Binaural Rendering</p>
     <p id="status">Loading...</p>
     <div style="text-align: center;">
-      <button onclick="play()" id="playButton" style="display: none">Play</button>
+      <button onclick="play()" id="playButton" style="display: none;">
+        Play
+      </button>
     </div>
     <script src="js/animation.js"></script>
-
-
   </body>
 </html>
